<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in_irescue_to_account"
        android:layout_margin="20dp"
        android:textColor="@android:color/black"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email"
        style="@style/editTextStyle"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            style="@style/editTextStyle"
            android:hint="@string/your_password"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_black_24dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_visibility_off_coloured_18dp"
            android:id="@+id/toggle_password"
            android:layout_marginRight="20dp"/>
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="end"
        android:textColor="@color/colorPrimary"
        android:layout_margin="10dp"
        android:id="@+id/forgot_password"/>

    <Button
        android:text="@string/sign_in"
        style="@style/buttonStyle"
        android:id="@+id/sign_in"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_now"
        android:textColor="@color/colorPrimary"
        android:id="@+id/sign_up_text_view"
        android:layout_margin="10dp"/>

</LinearLayout>